atualizando branch. problenas no orphanages.hbs para acessar os dados do fakedata.js - (aula 4 em andamento)

--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -47,6 +47,18 @@
       </aside>
 
       <div id="mapid" class="animate-appear"></div>
+
+      {{#each orphanages}}
+
+      <span hidden
+        data-id="{{this.id}}"
+        data-name="{{this.name}}"
+        data-lat="{{this.lat}}"
+        data-lng="{{this.lng}}"
+      ></span>
+
+      {{/each}}
+
       <a
         href="create-orphanage"
         class="create-orphanage"
