--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -48,17 +48,19 @@
 
       <div id="mapid" class="animate-appear"></div>
 
-      {{#each orphanages}}
-
-      <span hidden
+      <div class="orphanages">
+        {{#each orphanages}}
+        <span hidden
         data-id="{{this.id}}"
         data-name="{{this.name}}"
         data-lat="{{this.lat}}"
         data-lng="{{this.lng}}"
-      ></span>
+        ></span>
 
       {{/each}}
-
+      </div>
+     
+       
       <a
         href="create-orphanage"
         class="create-orphanage"
